# daily-stars-predictor

./: Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker-publish.yml
daily_stars_predictor/: main.py
notebooks/: helm_predict.ipynb  sample_predict.ipynb
tests/: test_main.py
