[tool.poetry]
name = "daily-stars-predictor"
version = "0.1.0"
description = ""
authors = ["Emanuele Fumagalli <efumagal@synamedia.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
compress = "^0.0.3"
statsforecast = "^1.7.3"
httpx = "^0.27.0"
pandas = "^2.2.1"
prophet = "^1.1.5"
cachetools = "^5.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
