[tool.poetry]
name = "daily-stars-predictor"
version = "0.1.0"
description = ""
authors = ["Emanuele Fumagalli"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.30.1"
compress = "^0.0.3"
httpx = "^0.27.0"
pandas = "^2.2.1"
prophet = "^1.1.5"
cachetools = "^5.5.0"
numpy = "==1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
