[project]
name = "daily-stars-predictor"
version = "0.1.0"
description = "Predict daily GitHub stars using Prophet time series forecasting"
authors = [{ name = "Emanuele Fumagalli" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "pandas",
    "prophet",
    "cachetools",
    "numpy",
    "statsmodels",
    "scipy",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
